--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,11 +33,11 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v4
-      - uses: actions/cache@v3
-        with:
-          # Cache resources
-          path: resources
-          key: ${{ runner.os }}-hugo-resources
+      # - uses: actions/cache@v3
+      #   with:
+      #     # Cache resources
+      #     path: resources
+      #     key: ${{ runner.os }}-hugo-resources
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
