--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,25 +1,24 @@
 # Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+name: HTML5 public to Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
-    branches: ["master"]
+    branches: ["public"]  # Runs on pushes targeting the public branch
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  contents: read
-  pages: write
-  id-token: write
+  contents : read
+  pages    : write
+  id-token : write
 
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
-  group: "pages"
-  cancel-in-progress: false
+  group              : "pages"
+  cancel-in-progress : false
 
 jobs:
   # Single deploy job since we're just deploying
@@ -33,16 +32,11 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v4
-      # - uses: actions/cache@v3
-      #   with:
-      #     # Cache resources
-      #     path: resources
-      #     key: ${{ runner.os }}-hugo-resources
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload public folder
-          path: public
+          path: . # Upload root folder of the branch
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+
