--- a/public/.github/workflows/static.yml
+++ b/public/.github/workflows/static.yml
@@ -2,23 +2,24 @@
 name: HTML5 public to Pages
 
 on:
+  # Runs on pushes targeting the public branch
   push:
-    branches: ["public"]  # Runs on pushes targeting the public branch
+    branches: ["public"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  contents : read
-  pages    : write
-  id-token : write
+  contents: read
+  pages: write
+  id-token: write
 
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
-  group              : "pages"
-  cancel-in-progress : false
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
   # Single deploy job since we're just deploying
@@ -35,7 +36,8 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: . # Upload root folder of the branch
+          # Upload root folder of the branch
+          path: '.'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
